Closed Bug 1247547 Opened 8 years ago Closed 8 years ago

WEBRTC_ICE_ADD_CANDIDATE* reports errors twice

Categories

(Core :: WebRTC: Networking, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla47
Tracking Status
firefox47 --- fixed

People

(Reporter: drno, Assigned: drno)

References

Details

(Keywords: regression)

Attachments

(1 file)

      No description provided.
Bug 1091242 moved the error counter into a new place without removing the old counter, thus the error counter |mAddCandidateErrorCount| gets increased twice since that bug landed in 37.
Assignee: nobody → drno
backlog: --- → webrtc/webaudio+
Rank: 28
Depends on: 1091242
Keywords: regression
Comment on attachment 8718270 [details]
MozReview Request: Bug 1247547: removed double accounting for WEBRTC_ICE_ADD_CANDIDATE telemetry probes. r=bwc

https://reviewboard.mozilla.org/r/34481/#review31199

::: media/webrtc/signaling/src/peerconnection/PeerConnectionImpl.h:622
(Diff revision 1)
> -  void OnAddIceCandidateError() {
> +  void OnAddIceCandidateError();

I don't think anything actually calls this. It can be removed entirely.

Fortunately this means any telemetry we have isn't polluted.
Attachment #8718270 - Flags: review?(docfaraday) → review+
Comment on attachment 8718270 [details]
MozReview Request: Bug 1247547: removed double accounting for WEBRTC_ICE_ADD_CANDIDATE telemetry probes. r=bwc

Review request updated; see interdiff: https://reviewboard.mozilla.org/r/34481/diff/1-2/
https://reviewboard.mozilla.org/r/34481/#review31199

> I don't think anything actually calls this. It can be removed entirely.
> 
> Fortunately this means any telemetry we have isn't polluted.

You are right. I mis-interpreted the call to OnAddIceCandidateError() here https://dxr.mozilla.org/mozilla-central/source/media/webrtc/signaling/src/peerconnection/PeerConnectionImpl.cpp#2064 to be calling this.

Removed the function all together.
https://hg.mozilla.org/mozilla-central/rev/32be2fe53fcd
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: