Bug 1247547: removed double accounting for WEBRTC_ICE_ADD_CANDIDATE telemetry probes. r=bwc

MozReview-Commit-ID: 43nNMVFLqT